--- a/css/main-style.css
+++ b/css/main-style.css
@@ -17,3 +17,15 @@ main {
   background-color: #ffffff;
   padding: 5em 6em 5em 5em;
 }
+
+h1 {
+  font-size: 2em;
+  line-height: 1.3;
+  margin-bottom: 25px;
+}
+
+h3 {
+  margin: 1.5 em 0 0.75 em 0;
+  font-size: 1.5em;
+  clear: left;
+}
