--- a/css/main-style.css
+++ b/css/main-style.css
@@ -1,32 +1,32 @@
 body {
-  background-color: #f1f4f9;
-  color: #414a51;
-  font-size: 16px;
+    background-color: #f1f4f9;
+    color: #414a51;
+    font-size: 16px;
 }
 
 #flex-container {
-	display: -webkit-flex;
-	display: flex;
-	-webkit-flex-direction: row;
-	flex-direction: row;
-  padding: 20px;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: row;
+    flex-direction: row;
+    padding: 20px;
 }
 
 .flex-item {
-  background-color: #ffffff;
-  width: 33.33%;
-  height: 100%;
-  margin: 10px;
-  flex-grow: 1;
-  flex-shrink: 1;
+    background-color: #ffffff;
+    width: 33.33%;
+    height: 100%;
+    margin: 10px;
+    flex-grow: 1;
+    flex-shrink: 1;
 }
 
-h1, h3 {
-  margin: 1em 0 0 0.25em;
-  padding: 0.25em 0;
+h1,
+h3 {
+    margin: 1em 0 0 0.25em;
+    padding: 0.25em 0;
 }
 
 p {
-  padding: 0.75em 0.75em 0.75em 0.75em;
+    padding: 0.75em 0.75em 0.75em 0.75em;
 }
-
